# shbt-261-mini-project-2

./: .gitignore  README.md  pyproject.toml
configs/ablations/: unet_aug_none.yaml  unet_aug_strong.yaml  unet_loss_cross_entropy.yaml  unet_loss_dice.yaml  unet_resnet18.yaml  unet_resnet50.yaml
configs/base/: base.yaml
configs/experiments/: deeplabv3plus_resnet50.yaml  mask2former_swin_tiny.yaml  sam2_hiera_s_frozen.yaml  sam2_hiera_s_lora.yaml  segformer_b2.yaml  unet_resnet34.yaml
configs/local_ablations/: sam2_hiera_s_lora_mps.yaml  unet_aug_none_mps.yaml  unet_aug_strong_mps.yaml  unet_loss_cross_entropy_mps.yaml  unet_loss_dice_mps.yaml  unet_resnet18_mps.yaml  unet_resnet50_mps.yaml
configs/local_robustness/: deeplabv3plus_resnet50_split_seed19_mps.yaml  deeplabv3plus_resnet50_split_seed7_mps.yaml  sam2_hiera_s_lora_r16_mps.yaml  sam2_hiera_s_lora_r4_mps.yaml  segformer_b2_split_seed19_mps.yaml  segformer_b2_split_seed7_mps.yaml
configs/local_runs/: deeplabv3plus_resnet50_mps.yaml  mask2former_swin_tiny_mps.yaml  sam2_hiera_s_frozen_mps.yaml  segformer_b2_mps.yaml  (+1 more)
notebooks/: voc_eda.ipynb
reports/: final_report.tex  references.bib  report_template.md  run_manifest_template.csv
scripts/: aggregate_results.py  build_final_report.sh  build_report_assets.py  evaluate.py  evaluate_suite.py  fetch_pretrained_assets.py  prepare_voc.py  run_suite.py  show_progress.py  train.py
tests/: test_config.py  test_losses.py  test_mask2former.py  test_metrics.py  test_models.py  test_segformer.py  test_splitter.py  test_training_policy.py  test_transforms.py
(+34 files in other folders)
